# Agent_A

./: .gitignore  CONTEXT.MD  README.md  plan_v2.md  pyproject.toml  requirements.txt
.hermes/plans/: 2026-06-18-phase9-cockpit-frontend.md  2026-06-22_204900-phase10-cockpit-driver.md
api/: __main__.py  app.py  models.py  playbooks.py  plot_engine.py  plots.py  surfaces.py
backend/forecasting/: approval_gateway.py  backtest.py  business_outcomes.py  canonical_data.py  cockpit_state.py  (+30 more)
docs/: review.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
tests/: conftest.py  stubs.py  test_api_advance.py  test_api_cockpit_state.py  test_api_messages.py  test_api_uploads.py  test_approval_gateway.py  test_backtest.py  test_business_outcomes.py  test_canonical_data.py  test_card_lifecycle.py  test_cockpit_contracts.py  test_cockpit_integration.py  test_cockpit_state.py  test_cockpit_surfaces_cb4.py  test_cockpit_surfaces_cb5.py  test_cockpit_surfaces_cb6.py  test_cockpit_surfaces_cb7.py  test_code_escalation.py  test_conductor.py  test_conductor_e2e.py  test_conductor_tools.py  test_config_escalation.py  test_data_drift.py  test_data_store.py  test_eda_probes.py  test_eda_toolbox.py  test_ensemble.py  test_erp_release.py  test_escalation_tracker_docs.py  test_feature_factory.py  test_forecast_harness.py  test_forecasting_models.py  test_guard.py  test_learning_workspace.py  test_lens.py  test_marginal_gain.py  test_metrics.py  test_model_drift.py  test_model_escalation.py  (+21 more)
(+67 files in other folders)
