[project]
name = "agent-p"
version = "0.1.0"
description = "Multi-agent demand forecasting assistant for FMCG and related domains"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "anthropic==0.28.0",
    "pydantic==2.7.1",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "statsmodels==0.14.2",
    "python-multipart==0.0.9",
]

[dependency-groups]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["backend"]
